<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Currency</string>
    <string name="title_current">Current currency </string>
	<string name="cu_from">Convert to select currency</string>
	<string name="cu_to">Convert to GRN</string>
	<string name="cu_convert">Convert</string>
	<string name="currency_prompt">List of currencies</string>
    <string name="update_rate">Update rate</string>
    <string name="exit">Exit</string>
    <string name="about">About</string>
    <!--<string name="title_input">GRN</string>-->
</resources>
