<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_height="fill_parent" 
        android:layout_width="fill_parent">
    <TextView android:id="@+id/label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_current"
        ></TextView>

    <EditText android:layout_height="wrap_content" 
        android:id="@+id/editText1" 
        android:layout_width="fill_parent" 
        android:inputType="numberDecimal|numberSigned"></EditText>
  <Spinner 
        android:id="@+id/spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="true"
        android:prompt="@string/currency_prompt"
    ></Spinner>
     <RadioGroup android:layout_height="wrap_content" 
        android:id="@+id/radioGroup1" 
        android:layout_width="wrap_content">
    
    <RadioButton android:id="@+id/radio0" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:checked="true" 
        android:text="@string/cu_from"></RadioButton>
    
    <RadioButton android:id="@+id/radio1" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:text="@string/cu_to"></RadioButton>
    </RadioGroup>
    
    <Button android:id="@+id/button_convert" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:text="@string/cu_convert" 
        android:onClick="cu_Clics"></Button>
   <Button
   android:id="@+id/button_clear"
   android:layout_width="fill_parent"
   android:layout_height="wrap_content"
   android:onClick="cu_Clear"
   android:text="Clear" ></Button>

   
</LinearLayout>
